= MagLev Change Log

== Unreleased Changes

* Fix Trac 654,655 in the IR generator phase of Ruby parser
* Webrick updated with security patch from 1.8.6p388

== Changes for 22780  2010-01-22
* Fix Trac 652
* Fix Trac 653 in Lexer
* Various FFI 
* Fix infinite loop on Sparc in high-res profiling
* Optimize Integer>>\\  to not compute unneeded quotient.
* In topaz, SET CLASS with no arg will print name of the current class
* Fix retry of timer thread connect in socketprim.c
* Fixes in GS for SOX complience
* Fixes for FFI alignment of nested structs and unions
* Fixes for RVM compliance

== Changes for 22725  2010-01-15

* Enhancements to make MagLev run under RVM
* Fixed bug that prevented Rake from running

== Changes for 22710  2010-0112

* Fixes to make haml work better
* Fixes to make rack 1.1 work
* Fixes to constant definitions
* Implemented Process::Status
* Fixes regression in Trac 592
* Fixes Trac 641a , 645, 647, 649
* Fixes compile error on Sparc Solaris
* Installable using RVM. See:  http://rvm.beginrescueend.com/
* Changed installers to use .tar.gz format rather than .zip
* Changed downloads from .zip to .tar.gz format.

== Changes for 22683  2010-01-04

* Optimize fetch/store to Ruby global variables
* Rewrite Hash, IdentityHash to no longer inherit from Smalltalk
  KeyValueDictionary ; the implementations are closer to pure Ruby.
* Fix parser failure part of Trac 483.
* Fix Trac 641.
* Changes to Thread implementation to go with changes to Smalltalk
  implementation of GsProcess>>terminate .
* Removed old workaround for json and trac 616, which has been fixed.
  If you were doing:     require 'maglev_json'
  You must instead do:   require 'json'

== Changes for 22635  2009-12-10

* Performance improvements for binding, some string operations
* fixes to pass more core/io specs.
* Moved mdb and hat_trick to examples/persistence.
* More Gprof support.  Add ability to suspend and resume sampling.
* Added methods temp_obj_space*  to System
