@@ -4,6 +4,9 @@
 
 * Fix Trac 654,655 in the IR generator phase of Ruby parser
 * Webrick updated with security patch from 1.8.6p388
+* Fixed --stone option to maglev-ruby
+* Added Maglev::System.stone_name to return the name of the stone the VM is
+  connected to.
 
 == Changes for 22780  2010-01-22
 * Fix Trac 652
